# countly-sdk-cpp

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Countly.cpp  Countly.h  CountlyConnectionQueue.cpp  CountlyConnectionQueue.h  CountlyCpp.gyp  CountlyCpp.supp  CountlyEventQueue.cpp  CountlyEventQueue.h  CountlyTest.cpp  Doxyfile  LICENSE  LICENSE.md  Makefile  Makefile.linux  Makefile.osx  Makefile.win  README.md  TestCountly.cpp  common.gypi  countly.sqlite  generate  generate.cmd  package-lock.json  package.json  python_build_script.py  script.bat
.github/workflows/: c-cpp.yml  codeql-analysis.yml  doctests.yml  tests.yml
CountlyCpp.xcodeproj/: project.pbxproj
CountlyCpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CountlyCpp.xcodeproj/project.xcworkspace/xcshareddata/: CountlyCpp.xccheckout
CountlyCpp.xcodeproj/project.xcworkspace/xcuserdata/noth.xcuserdatad/: UserInterfaceState.xcuserstate
CountlyCpp.xcodeproj/xcuserdata/noth.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CountlyCpp.xcodeproj/xcuserdata/noth.xcuserdatad/xcschemes/: CountlyCpp.xcscheme  xcschememanagement.plist
examples/: example_integration.cpp  using_thread.cpp
include/: countly.hpp  countly.hpp.in  view.hpp
include/countly/: constants.hpp  countly_configuration.hpp  crash_module.hpp  database_helper.hpp  event.hpp  event_module.hpp  logger_module.hpp  request_builder.hpp  request_module.hpp  sqlite_storage_module.hpp  storage_base.hpp  storage_module.hpp  storage_module_base.hpp  storage_module_db.hpp  storage_module_memory.hpp  views.hpp  views_module.hpp
src/: countly.cpp  countly.hpp  countly.hpp.in  countly_configuration.cpp  crash_module.cpp  database_helper.cpp  event.cpp  event_module.cpp  logger_module.cpp  request_builder.cpp  request_module.cpp  sqlite_storage_module.cpp  storage_module.cpp  storage_module_db.cpp  storage_module_memory.cpp  view.cpp  views.cpp  views_module.cpp
test/: binary.js  code.style.test.js  common.js  keepalive.default.test.js  maxevents.default.urgent.test.js  maxevents.modified.test.js  maxevents.modified.urgent.test.js  period.default.test.js  period.modified.test.js  server.breakdown.test.js  server.delayed.test.js  server.down.test.js  server.js  simple.test.js  startstop.1.test.js  startstop.2.test.js  traffic.default.test.js  util.binary.js  util.compare.js  util.events.js  util.metrics.js  util.server.js
tests/: config.cpp  countly_configuration.cpp  crash.cpp  eq_batch.cpp  event.cpp  event_queue.cpp  main.cpp  request.cpp  session.cpp  storage.cpp  storage_db.cpp  test_utils.hpp  views.cpp
